fixed the misalignment in the quote

--- a/css/app.css
+++ b/css/app.css
@@ -275,10 +275,6 @@ hr.small {
     padding: 80px 0 80px 0;
 }
 
-.poem {
-    padding: 80px 700px 80px 700px;
-}
-
 /* ---- Services ---- */
 .services {
     padding: 50px 0;
